--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - frontend
 
   phpfpm:
-    image: php:7.3-fpm
+    image: php:8.0-fpm
     container_name: my_php
     ports:
        - "9000:9000"
@@ -53,10 +53,25 @@ services:
       - ./redis/data:/usr/local/redis/data
       - ./redis/redis.conf:/usr/local/redis/redis.conf
       - ./redis/redis.log:/usr/local/redis/redis.log    
+      - ./redis/conf:/usr/local/etc/redis
     restart: always
     networks:
       - backend
-    
+
+  rabbitmq:
+     image: rabbitmq:3-management
+     container_name: rabbitmq
+     ports:
+       - "5672:5672"
+       - "15672:15672"
+     volumes:
+       - ./rabbitmq/data:/var/lib/rabbitmq
+     environment:
+       - RABBITMQ_DEFAULT_USER=admin
+       - RABBITMQ_DEFAULT_PASS=123456
+     networks:
+       - backend
+     restart: always
 
 networks:
   frontend:
