--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,12 @@ services:
     ports:
       - "80:80"
     volumes:
-       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-       - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
-       - ./nginx/log/:/var/log/nginx/
-       - /var/www/:/var/www
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/log/:/var/log/nginx/
+      - /var/www/:/var/www
+    environment:
+      TZ: 'Asia/Shanghai'
     restart: always
     networks:
       - backend
@@ -19,14 +21,16 @@ services:
     image: php:8.0-fpm
     container_name: my_php
     ports:
-       - "9000:9000"
+      - "9000:9000"
     volumes:
-        - /var/www/:/var/www/
-        - ./php/php.ini:/usr/local/php/etc/php.ini
-        - ./php/php-fpm.conf:/usr/local/php/etc/php-fpm.conf
-        - ./php/www.conf:/usr/local/php/etc/php-fpm.d/www.conf
-        - ./php/log/:/usr/local/php/var/log/
+      - /var/www/:/var/www/
+      - ./php/php.ini:/usr/local/php/etc/php.ini
+      - ./php/php-fpm.conf:/usr/local/php/etc/php-fpm.conf
+      - ./php/www.conf:/usr/local/php/etc/php-fpm.d/www.conf
+      - ./php/log/:/usr/local/php/var/log/
     restart: always
+    environment:
+      TZ: 'Asia/Shanghai'
     networks:
       - backend
 
@@ -37,7 +41,9 @@ services:
     volumes:
       - ./mysql/data:/var/lig/mysql
       - ./mysql/my.cnf:/etc/my.cnf
+    command: --default-authentication-plugin=mysql_native_password
     environment:
+      TZ: 'Asia/Shanghai'
       MYSQL_ROOT_PASSWORD: 123456
     networks:
       - backend
@@ -54,24 +60,27 @@ services:
       - ./redis/redis.conf:/usr/local/redis/redis.conf
       - ./redis/redis.log:/usr/local/redis/redis.log    
       - ./redis/conf:/usr/local/etc/redis
+    environment:
+      TZ: 'Asia/Shanghai'
     restart: always
     networks:
       - backend
 
   rabbitmq:
-     image: rabbitmq:3-management
-     container_name: rabbitmq
-     ports:
-       - "5672:5672"
-       - "15672:15672"
-     volumes:
-       - ./rabbitmq/data:/var/lib/rabbitmq
-     environment:
-       - RABBITMQ_DEFAULT_USER=admin
-       - RABBITMQ_DEFAULT_PASS=123456
-     networks:
-       - backend
-     restart: always
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    volumes:
+      - ./rabbitmq/data:/var/lib/rabbitmq
+    environment:      
+      RABBITMQ_DEFAULT_USER: admin
+      RABBITMQ_DEFAULT_PASS: 123456
+      TZ: 'Asia/Shanghai'
+    networks:
+      - backend
+    restart: always
 
 networks:
   frontend:
