启动守护进程

--- a/supervisor/Dockerfile
+++ b/supervisor/Dockerfile
@@ -5,7 +5,8 @@ MAINTAINER jybtx <admin@jybtx.com>
 
 # Install Supervisor.
 RUN set -x && \
-  apt update && \
+  apt update -y && \
+  apt upgrade -y && \
   apt install -y supervisor && \
   rm -rf /var/lib/apt/lists/*
 
@@ -14,12 +15,6 @@ RUN curl -sS https://getcomposer.org/installer | php \
    && mv composer.phar /usr/local/bin/composer \
    && composer config -g repo.packagist composer https://packagist.phpcomposer.com
 
-
-
-# - Check the output of apt-cache policy manually to determine why output is empty [KRNL-5788]
-RUN apt -y update | apt upgrade -y
-
-
 # ------------------------------------------------------------------------------
 # Start supervisor, define default command.
-# CMD ["supervisord", "-c", "/etc/supervisor/supervisord.conf"]
+CMD ["supervisord", "-c", "/etc/supervisor/supervisord.conf"]
