守护进程修改

--- a/supervisor/Dockerfile
+++ b/supervisor/Dockerfile
@@ -17,4 +17,4 @@ RUN curl -sS https://getcomposer.org/installer | php \
 
 # ------------------------------------------------------------------------------
 # Start supervisor, define default command.
-CMD ["supervisord", "-c", "/etc/supervisor/supervisord.conf"]
+# CMD ["supervisord", "-c", "/etc/supervisor/supervisord.conf"]
