--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,3 +33,17 @@ http {
 
     include conf.d/*.conf;
 }
+
+# rabbitmq通信
+stream{
+    upstream rabbitTcp{
+        server rabbitmq1:5672;
+        server rabbitmq2:5672;
+        server rabbitmq3:5672;
+    }
+
+    server {
+        listen 5675;
+        proxy_pass rabbitTcp;
+    }
+}
