--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - ./mysql/data:/var/lig/mysql
+      - ./mysql/data:/var/lib/mysql
       - ./mysql/my.cnf:/etc/my.cnf
     command: --default-authentication-plugin=mysql_native_password
     environment:
