--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
       - ./nginx/log/:/var/log/nginx/
-      - /var/www/:/var/www
+      - /var/www/html:/var/www/html
     environment:
       TZ: 'Asia/Shanghai'
     restart: always
@@ -23,7 +23,7 @@ services:
     ports:
       - "9000:9000"
     volumes:
-      - /var/www/:/var/www/
+      - /var/www/html:/var/www/html
       - ./php/php.ini:/usr/local/etc/php/php.ini
       - ./php/php-fpm.conf:/usr/local/php/etc/php-fpm.conf
       - ./php/www.conf:/usr/local/php/etc/php-fpm.d/www.conf
@@ -39,6 +39,7 @@ services:
 
   mysql:
     image: mysql:8.0
+    container_name: mysql
     ports:
       - "3306:3306"
     volumes:
@@ -51,10 +52,12 @@ services:
     environment:
       TZ: 'Asia/Shanghai'
       MYSQL_ROOT_PASSWORD: 123456
+      MYSQL_USER: repl
+      MYSQL_PASSWORD: 123456
     networks:
       - backend
     restart: always
-    container_name: mysql
+
 
   redis:
     image: redis
