--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
     listen       80;
     server_name  localhost;
-    root       /var/www;    
+    root       /var/www/html;
 
     location / {
         index  index.html index.htm index.php;
