--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,14 +1,16 @@
-#user  nobody;
-worker_processes  1;
+user nginx;
+worker_processes  auto;
 
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
 #error_log  logs/error.log  info;
+error_log  /var/log/nginx/error.log warn;
 
 #pid        logs/nginx.pid;
 
 
 events {
+    use epoll;
     worker_connections  1024;
 }
 
@@ -23,13 +25,48 @@ http {
 
     #access_log  logs/access.log  main;
 
+    server_tokens off;
+    fastcgi_hide_header X-Powered-By;
+
+    proxy_set_header  X-real-ip $remote_addr;
+
+
+    # HTTP response headers borrowed from Nextcloud `.htaccess`
+    add_header Referrer-Policy                      "no-referrer"   always;    
+    add_header X-Download-Options                   "noopen"        always;
+    add_header X-Permitted-Cross-Domain-Policies    "none"          always;
+    add_header X-Robots-Tag                         "none"          always;
+    add_header X-Frame-Options                      "SAMEORIGIN" always;
+    add_header X-XSS-Protection                     "1; mode =block" always;
+    add_header X-Content-Type-Options               "nosniff" always;
+    add_header Strict-Transport-Security            "max-age =31536000; includeSubDomains" always;
+
+
     sendfile        on;
     #tcp_nopush     on;
-
-    #keepalive_timeout  0;
+    #连接超时时间,单位是秒
     keepalive_timeout  65;
+    client_header_buffer_size 512k;
+    large_client_header_buffers 4 512k;
+    client_max_body_size 100m;
 
-    #gzip  on;
+    #FastCGI相关参数：为了改善网站性能：减少资源占用，提高访问速度
+    fastcgi_connect_timeout 300;
+    fastcgi_send_timeout 300;
+    fastcgi_read_timeout 300;
+    fastcgi_buffer_size 64k;
+    fastcgi_buffers 4 64k;
+    fastcgi_busy_buffers_size 128k;
+    fastcgi_temp_file_write_size 128k;
+
+    gzip  on;
+    gzip_disable "MSIE [1-6]\.";
+    gzip_min_length  1k;
+    gzip_buffers     4 16k;
+    gzip_http_version 1.1;
+    gzip_vary on;
+    gzip_comp_level 9;
+    gzip_types  text/xml application/xml application/atom+xml application/rss+xml application/xhtml+xml image/svg+xml text/javascript application/javascript application/x-javascript text/x-json application/json application/x-web-app-manifest+json text/css text/plain text/x-component font/opentype application/x-font-ttf application/vnd.ms-fontobject image/x-icon;
 
     include conf.d/*.conf;
 }
