--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -48,7 +48,7 @@ read_rnd_buffer_size = 256K
 myisam_sort_buffer_size = 8M 
 thread_cache_size = 16 
 tmp_table_size = 32M 
-lower_case_table_names = 1 
+lower_case_table_names=1
 sql-mode=NO_ENGINE_SUBSTITUTION,STRICT_TRANS_TABLES 
 explicit_defaults_for_timestamp = true 
 max_connections = 500 
@@ -62,9 +62,9 @@ slow_query_log=1
 slow-query-log-file=/var/lib/mysql/mysql-slow.log 
 long_query_time=3 
 early-plugin-load = "" 
-innodb_data_home_dir = /var/lib/mysql/innodb/data 
-innodb_data_file_path = ibdata1:10M:autoextend 
-innodb_log_group_home_dir = /var/lib/mysql/innodb/data 
+innodb_data_home_dir=/var/lib/mysql/data 
+innodb_data_file_path=ibdata1:10M:autoextend 
+innodb_log_group_home_dir=/var/lib/mysql/data 
 innodb_buffer_pool_size = 128M 
 innodb_log_file_size = 64M 
 innodb_log_buffer_size = 16M 
