--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -25,16 +25,14 @@ symbolic-links=0
 
 # Recommended in standard MySQL setup
 sql_mode=NO_ENGINE_SUBSTITUTION,STRICT_TRANS_TABLES 
-default-storage-engine=INNODB    
-
+default-storage-engine=INNODB
 character-set-server=utf8mb4
 collation-server=utf8mb4_general_ci
-
 default_authentication_plugin=mysql_native_password
 
 # 追加部分
 secure_file_priv=/var/lib/mysql 
-port = 3306 
+join_buffer_size = 128M
 performance_schema_max_table_instances = 400 
 table_definition_cache = 400 
 skip-external-locking 
@@ -49,7 +47,6 @@ myisam_sort_buffer_size = 8M
 thread_cache_size = 16 
 tmp_table_size = 32M 
 lower_case_table_names=1
-sql-mode=NO_ENGINE_SUBSTITUTION,STRICT_TRANS_TABLES 
 explicit_defaults_for_timestamp = true 
 max_connections = 500 
 max_connect_errors = 100 
