--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -46,7 +46,7 @@ read_rnd_buffer_size = 256K
 myisam_sort_buffer_size = 8M 
 thread_cache_size = 16 
 tmp_table_size = 32M 
-lower_case_table_names=1
+# lower_case_table_names=1
 explicit_defaults_for_timestamp = true 
 max_connections = 500 
 max_connect_errors = 100 
