--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -31,60 +31,60 @@ collation-server=utf8mb4_general_ci
 default_authentication_plugin=mysql_native_password
 
 # 追加部分
-secure_file_priv=/var/lib/mysql 
-join_buffer_size = 128M
-performance_schema_max_table_instances = 400 
-table_definition_cache = 400 
-skip-external-locking 
-key_buffer_size = 32M 
-max_allowed_packet = 10G 
-table_open_cache = 128 
-sort_buffer_size = 768K 
-net_buffer_length = 4K 
-read_buffer_size = 768K 
-read_rnd_buffer_size = 256K 
-myisam_sort_buffer_size = 8M 
-thread_cache_size = 16 
-tmp_table_size = 32M 
+# secure_file_priv=/var/lib/mysql 
+# join_buffer_size = 128M
+# performance_schema_max_table_instances = 400 
+# table_definition_cache = 400 
+# skip-external-locking 
+# key_buffer_size = 32M 
+# max_allowed_packet=20M 
+# table_open_cache = 128 
+# sort_buffer_size = 768K 
+# net_buffer_length = 4K 
+# read_buffer_size = 768K 
+# read_rnd_buffer_size = 256K 
+# myisam_sort_buffer_size = 8M 
+# thread_cache_size = 16 
+# tmp_table_size = 32M 
 # lower_case_table_names=1
-explicit_defaults_for_timestamp = true 
-max_connections = 500 
-max_connect_errors = 100 
-open_files_limit = 65535 
-log-bin=mysql-bin
-binlog_format=mixed 
-server-id = 1 
-binlog_expire_logs_seconds = 600000 
-slow_query_log=1 
-slow-query-log-file=/var/lib/mysql/slow/mysql-slow.log 
-long_query_time=3 
-early-plugin-load = "" 
-innodb_data_home_dir=/var/lib/mysql/data 
-innodb_data_file_path=ibdata1:10M:autoextend 
-innodb_log_group_home_dir=/var/lib/mysql/data 
-innodb_buffer_pool_size = 128M 
-innodb_log_file_size = 64M 
-innodb_log_buffer_size = 16M 
-innodb_flush_log_at_trx_commit = 1 
-innodb_lock_wait_timeout = 50 
-innodb_max_dirty_pages_pct = 90 
-innodb_read_io_threads = 1 
-innodb_write_io_threads = 1
+# explicit_defaults_for_timestamp = true 
+# max_connections = 500 
+# max_connect_errors = 100 
+# open_files_limit = 65535 
+# log-bin=mysql-bin
+# binlog_format=mixed 
+# server-id = 1 
+# binlog_expire_logs_seconds = 600000 
+# slow_query_log=1 
+# slow-query-log-file=/var/lib/mysql/slow/mysql-slow.log 
+# long_query_time=3 
+# early-plugin-load = "" 
+# innodb_data_home_dir=/var/lib/mysql/data 
+# innodb_data_file_path=ibdata1:10M:autoextend 
+# innodb_log_group_home_dir=/var/lib/mysql/data 
+# innodb_buffer_pool_size = 128M 
+# innodb_log_file_size = 64M 
+# innodb_log_buffer_size = 16M 
+# innodb_flush_log_at_trx_commit = 1 
+# innodb_lock_wait_timeout = 50 
+# innodb_max_dirty_pages_pct = 90 
+# innodb_read_io_threads = 1 
+# innodb_write_io_threads = 1
 
-[mysqldump] 
-quick 
-max_allowed_packet = 500M 
+# [mysqldump] 
+# quick
+# max_allowed_packet=20M 
 
-[mysql] 
-no-auto-rehash 
+# [mysql] 
+# no-auto-rehash 
 
-[myisamchk] 
-key_buffer_size = 32M 
-sort_buffer_size = 768K 
-read_buffer = 2M write_buffer = 2M
+# [myisamchk] 
+# key_buffer_size = 32M 
+# sort_buffer_size = 768K 
+# read_buffer = 2M write_buffer = 2M
 
-[mysqlhotcopy]
-interactive-timeout
+# [mysqlhotcopy]
+# interactive-timeout
 
 # 追加完
 
