--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -81,7 +81,8 @@ default_authentication_plugin=mysql_native_password
 # [myisamchk] 
 # key_buffer_size = 32M 
 # sort_buffer_size = 768K 
-# read_buffer = 2M write_buffer = 2M
+# read_buffer = 2M
+# write_buffer = 2M
 
 # [mysqlhotcopy]
 # interactive-timeout
