--- a/supervisor/Dockerfile2
+++ b/supervisor/Dockerfile2
@@ -32,13 +32,13 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone &
   pecl install -o -f redis && docker-php-ext-enable redis && \
 
 # 安装 grpc 扩展
- pecl install -o -f grpc && docker-php-ext-enable grpc && \
+# pecl install -o -f grpc && docker-php-ext-enable grpc && \
 
 # 安装 protobuf 扩展
- pecl install -o -f protobuf  && docker-php-ext-enable protobuf && \
+# pecl install -o -f protobuf  && docker-php-ext-enable protobuf && \
 
 # 安装 memcached 扩展
- pecl install -o -f memcached  && docker-php-ext-enable memcached && \
+# pecl install -o -f memcached  && docker-php-ext-enable memcached && \
 
 # 安装 swoole 扩展
  pecl install -o -f swoole && docker-php-ext-enable swoole
