--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,9 @@
-user nginx;
+
+user  nginx;
 worker_processes  auto;
 
-#error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
-error_log  /var/log/nginx/error.log warn;
-
-#pid        logs/nginx.pid;
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
 
 
 events {
@@ -16,68 +13,44 @@ events {
 
 
 http {
-    include       mime.types;
+    include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #access_log  logs/access.log  main;
-
-    server_tokens off;
-    fastcgi_hide_header X-Powered-By;
-
-    # HTTP response headers borrowed from Nextcloud `.htaccess`
-    add_header Referrer-Policy                      "no-referrer"   always;    
-    add_header X-Download-Options                   "noopen"        always;
-    add_header X-Permitted-Cross-Domain-Policies    "none"          always;
-    add_header X-Robots-Tag                         "none"          always;
-    add_header X-Frame-Options                      "SAMEORIGIN" always;
-    add_header X-XSS-Protection                     "1; mode =block" always;
-    add_header X-Content-Type-Options               "nosniff" always;
-    add_header Strict-Transport-Security            "max-age =31536000; includeSubDomains" always;
-
+    access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
-    #tcp_nopush     on;
-    #连接超时时间,单位是秒
-    keepalive_timeout  65;
-    client_header_buffer_size 512k;
-    large_client_header_buffers 4 512k;
-    client_max_body_size 100m;
+    
 
-    #FastCGI相关参数：为了改善网站性能：减少资源占用，提高访问速度
+    keepalive_timeout  65;
+    server_tokens off;
+    client_header_buffer_size  512k;
+    large_client_header_buffers 4 512k;
+    client_max_body_size 200M;
+
+    
+    fastcgi_hide_header X-Powered-By;
+
     fastcgi_connect_timeout 300;
     fastcgi_send_timeout 300;
     fastcgi_read_timeout 300;
     fastcgi_buffer_size 64k;
     fastcgi_buffers 4 64k;
     fastcgi_busy_buffers_size 128k;
-    fastcgi_temp_file_write_size 128k;
+    fastcgi_temp_file_write_size 128k; 
 
     gzip  on;
     gzip_disable "MSIE [1-6]\.";
     gzip_min_length  1k;
-    gzip_buffers     4 16k;
-    gzip_http_version 1.1;
-    gzip_vary on;
-    gzip_comp_level 6;
-    gzip_types  text/xml application/xml application/atom+xml application/rss+xml application/xhtml+xml image/svg+xml text/javascript application/javascript application/x-javascript text/x-json application/json application/x-web-app-manifest+json text/css text/plain text/x-component font/opentype application/x-font-ttf application/vnd.ms-fontobject image/x-icon;
+    gzip_buffers 4 16k;
+    gzip_http_version 1.0;
+    gzip_comp_level 1;
+    gzip_types text/plain application/x-javascript text/css application/xml;
+    gzip_vary off;
 
-    include conf.d/*.conf;
+    include /etc/nginx/conf.d/*.conf;
 }
 
-# rabbitmq通信
-stream{
-    upstream rabbitTcp{
-        server rabbitmq1:5672;
-        server rabbitmq2:5672;
-        server rabbitmq3:5672;
-    }
-
-    server {
-        listen 5675;
-        proxy_pass rabbitTcp;
-    }
-}
