--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,7 @@
 
 user  nginx;
 worker_processes  auto;
+worker_rlimit_nofile 65535;
 
 error_log  /var/log/nginx/error.log notice;
 pid        /var/run/nginx.pid;
@@ -8,11 +9,26 @@ pid        /var/run/nginx.pid;
 
 events {
     use epoll;
-    worker_connections  1024;
+#    multi_accept       on;
+    worker_connections  65535;
 }
 
 
 http {
+    charset                utf-8;
+    sendfile               on;
+    tcp_nopush             on;
+    tcp_nodelay            on;
+    server_tokens          off;
+    log_not_found          off;
+    types_hash_max_size    2048;
+    types_hash_bucket_size 64;
+    client_max_body_size   16M;
+    keepalive_timeout      65;
+    server_tokens          off;
+    client_header_buffer_size  512k;
+    large_client_header_buffers 4 512k;
+
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
@@ -22,18 +38,26 @@ http {
 
     access_log  /var/log/nginx/access.log  main;
 
-    sendfile        on;
-    
+    # security headers, HTTP response headers borrowed from Nextcloud `.htaccess`
+    add_header X-XSS-Protection                     "1; mode=block" always;
+    add_header X-Content-Type-Options               "nosniff" always;
+    add_header Referrer-Policy                      "no-referrer-when-downgrade" always;
+    add_header Content-Security-Policy              "default-src 'self' http: https: ws: wss: data: blob: 'unsafe-inline'; frame-ancestors 'self';" always;
+    add_header Permissions-Policy                   "interest-cohort=()" always;
+    add_header Strict-Transport-Security            "max-age=31536000; includeSubDomains" always;
+    add_header X-Download-Options                   "noopen"        always;
+    add_header X-Permitted-Cross-Domain-Policies    "none"          always;
+    add_header X-Robots-Tag                         "none"          always;
+    add_header X-Frame-Options                      "SAMEORIGIN" always;
 
-    keepalive_timeout  65;
-    server_tokens off;
-    client_header_buffer_size  512k;
-    large_client_header_buffers 4 512k;
-    client_max_body_size 200M;
+        
 
+    # .files
+    location ~ /\.(?!well-known) {
+        deny all;
+    }
     
     fastcgi_hide_header X-Powered-By;
-
     fastcgi_connect_timeout 300;
     fastcgi_send_timeout 300;
     fastcgi_read_timeout 300;
@@ -42,14 +66,16 @@ http {
     fastcgi_busy_buffers_size 128k;
     fastcgi_temp_file_write_size 128k; 
 
+    # gzip
     gzip  on;
     gzip_disable "MSIE [1-6]\.";
     gzip_min_length  1k;
     gzip_buffers 4 16k;
     gzip_http_version 1.0;
-    gzip_comp_level 1;
-    gzip_types text/plain application/x-javascript text/css application/xml;
-    gzip_vary off;
+    gzip_vary       on;
+    gzip_proxied    any;
+    gzip_comp_level 6;
+    gzip_types      text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml application/x-javascript application/xml;
 
     include /etc/nginx/conf.d/*.conf;
 }
