--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,25 +8,25 @@ pid        /var/run/nginx.pid;
 
 
 events {
-    use epoll;
-#    multi_accept       on;
+    use                 epoll;
+    multi_accept        on;
     worker_connections  65535;
 }
 
 
 http {
-    charset                utf-8;
-    sendfile               on;
-    tcp_nopush             on;
-    tcp_nodelay            on;
-    server_tokens          off;
-    log_not_found          off;
-    types_hash_max_size    2048;
-    types_hash_bucket_size 64;
-    client_max_body_size   16M;
-    keepalive_timeout      65;
-    server_tokens          off;
-    client_header_buffer_size  512k;
+    charset                     utf-8;
+    sendfile                    on;
+    tcp_nopush                  on;
+    tcp_nodelay                 on;
+    server_tokens               off;
+    log_not_found               off;
+    types_hash_max_size         2048;
+    types_hash_bucket_size      64;
+    client_max_body_size        16M;
+    keepalive_timeout           65;
+    server_tokens               off;
+    client_header_buffer_size   512k;
     large_client_header_buffers 4 512k;
 
     include       /etc/nginx/mime.types;
@@ -57,25 +57,25 @@ http {
         deny all;
     }
     
-    fastcgi_hide_header X-Powered-By;
-    fastcgi_connect_timeout 300;
-    fastcgi_send_timeout 300;
-    fastcgi_read_timeout 300;
-    fastcgi_buffer_size 64k;
-    fastcgi_buffers 4 64k;
-    fastcgi_busy_buffers_size 128k;
+    fastcgi_hide_header          X-Powered-By;
+    fastcgi_connect_timeout      300;
+    fastcgi_send_timeout         300;
+    fastcgi_read_timeout         300;
+    fastcgi_buffer_size          64k;
+    fastcgi_buffers              4 64k;
+    fastcgi_busy_buffers_size    128k;
     fastcgi_temp_file_write_size 128k; 
 
     # gzip
-    gzip  on;
-    gzip_disable "MSIE [1-6]\.";
-    gzip_min_length  1k;
-    gzip_buffers 4 16k;
-    gzip_http_version 1.0;
-    gzip_vary       on;
-    gzip_proxied    any;
-    gzip_comp_level 6;
-    gzip_types      text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml application/x-javascript application/xml;
+    gzip                on;
+    gzip_disable        "MSIE [1-6]\.";
+    gzip_min_length     1k;
+    gzip_buffers        4 16k;
+    gzip_http_version   1.0;
+    gzip_vary           on;
+    gzip_proxied        any;
+    gzip_comp_level     6;
+    gzip_types          text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml application/x-javascript application/xml;
 
     include /etc/nginx/conf.d/*.conf;
 }
