--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,6 +11,7 @@ events {
     use                 epoll;
     multi_accept        on;
     worker_connections  65535;
+    accept_mutex        on;
 }
 
 
