--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -43,7 +43,7 @@ http {
     add_header X-Content-Type-Options               "nosniff" always;
     add_header Referrer-Policy                      "no-referrer-when-downgrade" always;
     add_header Content-Security-Policy              "default-src 'self' http: https: ws: wss: data: blob: 'unsafe-inline'; frame-ancestors 'self';" always;
-    add_header Permissions-Policy                   "interest-cohort=()" always;
+    # add_header Permissions-Policy                   "interest-cohort=()" always;    
     add_header Strict-Transport-Security            "max-age=31536000; includeSubDomains" always;
     add_header X-Download-Options                   "noopen"        always;
     add_header X-Permitted-Cross-Domain-Policies    "none"          always;
