--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -74,3 +74,16 @@ http {
     include /etc/nginx/conf.d/*.conf;
 }
 
+# rabbitmq通信
+stream{
+    upstream rabbitTcp{
+        server rabbitmq1:5672;
+        server rabbitmq2:5672;
+        server rabbitmq3:5672;
+    }
+
+    server {
+        listen 5675;
+        proxy_pass rabbitTcp;
+    }
+}
