--- a/supervisor/Dockerfile
+++ b/supervisor/Dockerfile
@@ -18,7 +18,7 @@ RUN set -x && \
   apt-get update && \
   apt-get install -y --no-install-recommends libfreetype6-dev libjpeg62-turbo-dev libpng-dev libxml2-dev libtidy-dev libxslt1-dev libmagickwand-dev libmcrypt-dev libzip-dev libmemcached-dev supervisor vim git redis && \
   rm -r /var/lib/apt/lists/* && \  
-  pecl install imagick-3.4.3 mcrypt-1.0.3 swoole && \
+  pecl install imagick-3.4.3 mcrypt-1.0.3 swoole-4.8.0 && \
   docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ && \
   docker-php-ext-install -j$(nproc) gd soap wddx xmlrpc tidy xsl zip bcmath calendar exif sockets pdo_mysql && \
   docker-php-ext-enable imagick mcrypt swoole && \
@@ -30,4 +30,4 @@ pecl install -o -f memcached  && docker-php-ext-enable memcached && \
 
 RUN curl -sS https://getcomposer.org/installer | php \
    && mv composer.phar /usr/local/bin/composer \
-   && composer config -g repo.packagist composer https://packagist.phpcomposer.com
+   && composer config -g repo.packagist composer https://packagist.org
