--- a/php74/Dockerfile
+++ b/php74/Dockerfile
@@ -19,7 +19,7 @@ RUN  sed -i s@/deb.debian.org/@/mirrors.aliyun.com/@g /etc/apt/sources.list && a
   && rm -rf /var/lib/apt/lists/* \
 
 # 安装 memcached 扩展
-# && pecl install memcached && docker-php-ext-enable memcached \
+&& pecl install memcached && docker-php-ext-enable memcached \
 
 # 安装 swoole 扩展
 && pecl install swoole-4.8.0 && docker-php-ext-enable swoole \
