--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx:/etc/nginx
       - ./nginx/log/:/var/log/nginx/
       - /var/www/html:/var/www/html
     working_dir: /etc/nginx/conf.d
