--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./nginx/cert:/etc/nginx/
+      - ./nginx/cert:/etc/nginx/cert
       - ./nginx/log/:/var/log/nginx/
       - /var/www/html:/var/www/html
     working_dir: /etc/nginx/conf.d
