--- a/php74/Dockerfile
+++ b/php74/Dockerfile
@@ -14,7 +14,7 @@ RUN  sed -i s@/deb.debian.org/@/mirrors.aliyun.com/@g /etc/apt/sources.list && a
   apt-get install -y libcurl4-openssl-dev libssl-dev git zip libbz2-dev libfreetype6-dev libjpeg62-turbo-dev libpng-dev libicu-dev libmemcached-dev libz-dev libpq-dev libzip-dev libonig-dev libjpeg-dev libmcrypt-dev libtidy-dev libxslt1-dev libmagickwand-dev supervisor zlib1g-dev libxml2-dev graphviz redis  \
   && docker-php-ext-configure gd --with-freetype --with-jpeg \
   && docker-php-ext-install -j$(nproc) gd \
-  && docker-php-ext-install pdo_mysql intl pcntl sockets soap exif opcache zip \
+  && docker-php-ext-install pdo_mysql intl pcntl sockets bcmath soap exif opcache zip \
 # && docker-php-ext-install bcmath intl pcntl sockets soap exif opcache swoole redis \
   && rm -rf /var/lib/apt/lists/* \
 
