--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -46,8 +46,10 @@ max_connect_errors = 100 # 生產環境配置1000
 open_files_limit = 65535 
 log-bin=mysql-bin
 binlog_format=mixed 
-server-id = 1 
-binlog_expire_logs_seconds = 600000 
+server-id = 1
+expire_logs_days = 15
+binlog_expire_logs_seconds = 604800
+max_binlog_size = 500M
 slow_query_log=1 
 slow-query-log-file=/var/lib/mysql/slow/mysql-slow.log 
 long_query_time=3
