--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -17,8 +17,9 @@
 # join_buffer_size = 128M
 # sort_buffer_size = 2M
 # read_rnd_buffer_size = 2M
-datadir=/var/lib/mysql
-socket=/var/lib/mysql/mysql.sock
+# datadir=/var/lib/mysql
+# socket=/var/lib/mysql/mysql.sock
+socket=/var/run/mysqld/mysqld.sock
 
 # Recommended in standard MySQL setup
 # sql_mode=NO_ENGINE_SUBSTITUTION,STRICT_TRANS_TABLES 
