--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -26,8 +26,8 @@ socket=/var/run/mysqld/mysqld.sock
 default-storage-engine=INNODB
 character-set-server=utf8mb4
 collation-server=utf8mb4_general_ci
-default_authentication_plugin=mysql_native_password
-# authentication_policy=*
+# default_authentication_plugin=mysql_native_password
+authentication_policy=*
 
 # 追加部分
 join_buffer_size = 128M
