elasticsearch注释掉密码

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -127,7 +127,7 @@ services:
     environment:
       ES_JAVA_OPTS: -Xms512m -Xmx512m
       TZ: 'Asia/Shanghai'
-      ELASTIC_PASSWORD: '123456'
+      # ELASTIC_PASSWORD: '123456'
     ports:
       - "9200:9200"
     volumes:
