--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -135,7 +135,7 @@ services:
     volumes:
       - ./elasticsearch/data:/usr/share/elasticsearch/data:z
       - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,z
-      - ./elasticsearch/config:/usr/share/elasticsearch/config:z
+      # - ./elasticsearch/config:/usr/share/elasticsearch/config:z
     networks:
       - backend
     restart: always
