--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -134,9 +134,7 @@ services:
     ports:
       - "9200:9200"
     volumes:
-      - ./elasticsearch/data:/usr/share/elasticsearch:z
-      # - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,z
-      # - ./elasticsearch/config:/usr/share/elasticsearch/config:z
+      - ./elasticsearch:/usr/share/elasticsearch:z
     networks:
       - backend
     restart: always
