--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -133,10 +133,11 @@ services:
       # ELASTIC_PASSWORD: '123456'
     ports:
       - "9200:9200"
+      - "9300:9300"
     volumes:
       - ./elasticsearch/data:/usr/share/elasticsearch/data:z
       # - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,z
-      # - ./elasticsearch/config:/usr/share/elasticsearch/config:z
+      - ./elasticsearch/config:/usr/share/elasticsearch/config:z
     networks:
       - backend
     restart: always
