--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -129,15 +129,15 @@ services:
     environment:
       ES_JAVA_OPTS: -Xms512m -Xmx512m
       TZ: 'Asia/Shanghai'
-      discovery.type: single-node # 单机版需要
       # ELASTIC_PASSWORD: '123456'
+      discovery.type: single-node
     ports:
       - "9200:9200"
       - "9300:9300"
     volumes:
       - ./elasticsearch/data:/usr/share/elasticsearch/data:z
-      # - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,z
-      - ./elasticsearch/config:/usr/share/elasticsearch/config:z
+      - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,z
+      # - ./elasticsearch/config:/usr/share/elasticsearch/config:z
     networks:
       - backend
     restart: always
