--- a/php74/Dockerfile
+++ b/php74/Dockerfile
@@ -22,7 +22,7 @@ RUN  sed -i s@/deb.debian.org/@/mirrors.aliyun.com/@g /etc/apt/sources.list && a
 && pecl install memcached && docker-php-ext-enable memcached \
 
 # 安装 swoole 扩展
-&& pecl install swoole && docker-php-ext-enable swoole \
+&& pecl install swoole-5.0.0 && docker-php-ext-enable swoole \
 
 # 安装 mcrypt 扩展
 && pecl install mcrypt && docker-php-ext-enable mcrypt \
