--- a/supervisor/Dockerfile
+++ b/supervisor/Dockerfile
@@ -18,7 +18,7 @@ RUN set -x && \
   apt-get update && \
   apt-get install -y --no-install-recommends libfreetype6-dev libjpeg62-turbo-dev libpng-dev libxml2-dev libtidy-dev libxslt1-dev libmagickwand-dev libmcrypt-dev libzip-dev libmemcached-dev supervisor vim git redis procps && \
   rm -r /var/lib/apt/lists/* && \  
-  pecl install imagick mcrypt swoole && \
+  pecl install imagick mcrypt swoole-5.0.0 && \
   docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ && \
   docker-php-ext-install -j$(nproc) gd soap wddx xmlrpc tidy xsl zip bcmath calendar exif sockets pdo_mysql pcntl && \
   docker-php-ext-enable imagick mcrypt swoole && \
