--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       - /var/www/html:/var/www/html
     working_dir: /var/www/html
     tty: true
+    restart: always
     environment:
       TZ: 'Asia/Shanghai'
     networks:
