--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -42,7 +42,7 @@ http {
     add_header X-XSS-Protection                     "1; mode=block" always;
     add_header X-Content-Type-Options               "nosniff" always;
     add_header Referrer-Policy                      "no-referrer-when-downgrade" always;
-    add_header Content-Security-Policy              "default-src 'self' http: https: ws: wss: data: blob: 'unsafe-inline'; frame-ancestors 'self';" always;
+    # add_header Content-Security-Policy              "default-src 'self' http: https: ws: wss: data: blob: 'unsafe-inline'; frame-ancestors 'self';" always;
     # add_header Permissions-Policy                   "interest-cohort=()" always;    
     add_header Strict-Transport-Security            "max-age=63072000; includeSubdomains; preload"; 
     add_header X-Download-Options                   "noopen"        always;
@@ -75,15 +75,15 @@ http {
 }
 
 # rabbitmq通信
-stream{
-    upstream rabbitTcp{
-        server rabbitmq1:5672;
-        server rabbitmq2:5672;
-        server rabbitmq3:5672;
-    }
+# stream{
+#    upstream rabbitTcp{
+#        server rabbitmq1:5672;
+#        server rabbitmq2:5672;
+#        server rabbitmq3:5672;
+#    }
 
-    server {
-        listen 5675;
-        proxy_pass rabbitTcp;
-    }
-}
+#    server {
+#        listen 5675;
+#        proxy_pass rabbitTcp;
+#    }
+#}
