--- a/php74/Dockerfile
+++ b/php74/Dockerfile
@@ -3,12 +3,12 @@ FROM php:7.4-fpm
 
 MAINTAINER jybtx <admin@jybtx.com>
 
-RUN  sed -i s@/archive.ubuntu.com/@/mirrors.aliyun.com/@g /etc/apt/sources.list
-RUN  sed -i s@/security.debian.org/@/mirrors.aliyun.com/@g /etc/apt/sources.list
-RUN  sed -i s@/deb.debian.org/@/mirrors.aliyun.com/@g /etc/apt/sources.list && apt-get clean && \
+#RUN  sed -i s@/archive.ubuntu.com/@/mirrors.aliyun.com/@g /etc/apt/sources.list
+#RUN  sed -i s@/security.debian.org/@/mirrors.aliyun.com/@g /etc/apt/sources.list
+#RUN  sed -i s@/deb.debian.org/@/mirrors.aliyun.com/@g /etc/apt/sources.list && apt-get clean
 
 # 安装基础
-  set -x && \
+RUN  set -x && \
   apt-get update -y && \
   apt-get upgrade -y && \
   apt-get install -y libcurl4-openssl-dev libssl-dev git zip libbz2-dev libfreetype6-dev libjpeg62-turbo-dev libpng-dev libicu-dev libmemcached-dev libz-dev libpq-dev libzip-dev libonig-dev libjpeg-dev libmcrypt-dev libtidy-dev libxslt1-dev libmagickwand-dev supervisor zlib1g-dev libxml2-dev graphviz redis procps default-mysql-client \
@@ -30,7 +30,7 @@ RUN  sed -i s@/deb.debian.org/@/mirrors.aliyun.com/@g /etc/apt/sources.list && a
 # 安装 imagick 扩展
 && pecl install imagick && docker-php-ext-enable imagick \
 
-  && apt-get clean \
+&& apt-get clean \
 
 
 # 删除php源码，有助于减小生成的镜像大小
